# scm-base

./: pyproject.toml
baz/: modx.py  mody.py
