[project]
name = "sa-baz"
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "baz/version.py"
# default: guess-next-dev, alternatives: post-release, no-guess-dev
version_scheme = "release-branch-semver"
